# SentraCore

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  roadmap.md
.githooks/: README.md  commit-msg  prepare-commit-msg
.github/workflows/: ci.yml  pages.yml  release.yml
app/: config.py  main.py
app/alerts/: __init__.py  alert_manager.py
app/api/: __init__.py  server.py
app/baseline/: __init__.py  baseline_model.py
app/buffer/: __init__.py  time_series_buffer.py
app/collector/: __init__.py  system_collector.py
app/datastore/: .gitkeep
app/events/: __init__.py  event_logger.py
app/normalization/: __init__.py  normalizer.py
app/process/: __init__.py  process_tracker.py
app/stress/: __init__.py  stress_engine.py
assets/: site.webmanifest
assets/css/: style.css
assets/js/: config.js  main.js
dashboard/: README.md  pubspec.yaml
dashboard/assets/: engine-config.json
docs/: README.md
engine/: __init__.py  config.py  engine_config.py  main.py  runtime_info.py  user_preferences.py
installer/: sentracore.iss
pages/: about.html  docs.html  download.html
scripts/: build_dashboard.bat  build_engine.bat  run_ci.bat  sign-windows-artifacts.ps1
tests/: test_alerts.py  test_baseline.py  test_buffer.py  test_collector.py  test_correlation.py  test_events.py  test_hardware_health.py  test_history_store.py  test_normalizer.py  test_prediction.py  test_process.py  test_runtime_info.py  test_runtime_state.py  test_stability.py  test_storage_layout.py  test_storage_scan.py  test_stress.py  test_user_preferences.py
(+102 files in other folders)
