[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentracore"
version = "0.1.0"
description = "Local system behavior intelligence layer — behavioral monitoring, anomaly detection, and root-cause analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SentraCore Team"},
]
keywords = ["system-monitoring", "telemetry", "anomaly-detection", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "psutil>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
sentracore = "engine.main:main"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
